--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -1,24 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Hind+Guntur:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital@1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Martel+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Hind+Guntur:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Martel+Sans&display=swap");
 
 //colors
-$first-color : #101728;
-$second-color : #1f41bb;
-$third-color : #ffffff;
-$fourth-color : #ff3c5f;
-$fifth-color : #9340ff;
-$shadow-color : #ababab;
+$first-color: #101728;
+$second-color: #1f41bb;
+$third-color: #ffffff;
+$fourth-color: #ff3c5f;
+$fifth-color: #9340ff;
+$shadow-color: #ababab;
 
 //fonts
-$main-heading-font : 'Hind Guntur', sans-serif;
-$secondary-heading-font : 'Fira Sans', sans-serif;
-$regular-text-font : 'Martel Sans', sans-serif;
-
-
+$main-heading-font: "Hind Guntur", sans-serif;
+$secondary-heading-font: "Fira Sans", sans-serif;
+$regular-text-font: "Martel Sans", sans-serif;
 
 //mixins
-@mixin btnStyle($bg_color_p){
+@mixin btnStyle($bg_color_p) {
   background-color: $bg_color_p;
   border: none;
   border-radius: 10px;
@@ -27,6 +25,70 @@ $regular-text-font : 'Martel Sans', sans-serif;
   color: $third-color;
 
   &:active {
-    box-shadow: inset 0px 0px 20px 10px $second-color;
+    @if ($bg_color_p == $second-color) {
+      box-shadow: inset 0px 0px 20px 20px $fourth-color;
+    } @else {
+      box-shadow: inset 0px 0px 20px 20px $second-color;
+    }
+  }
+}
+
+@mixin home-separtor ($fill_color_p){
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+
+  & > svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 150px;
+    fill: $fill_color_p;
+  }
+}
+
+//animations
+@keyframes sound_1 {
+  0% {
+    transform: translateY(0%);
+  }
+  25% {
+    transform: translateY(25%);
+  }
+
+  75% {
+    transform: translateY(-25%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes sound_2 {
+  0% {
+    transform: translateY(0%);
+  }
+  25% {
+    transform: translateY(-25%);
+  }
+
+  75% {
+    transform: translateY(25%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
