--- a/src/app/components/homePage/home.scss
+++ b/src/app/components/homePage/home.scss
@@ -3,51 +3,65 @@
 #home-page {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
 
-  #top-side {
+  #intro {
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    background-image: url("./home-BG.svg");
-    background-color: $first-color;
+    position: relative;
+    background-color: $third-color;
 
-    #home-headers {
+    #home-headers-logo {
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
 
       & > h1 {
         font-family: $main-heading-font;
+        font-size: 3rem;
         color: $first-color;
-        font-size: 2.5rem;
+
+        &::after {
+          content: "Bay";
+          font-size: 3rem;
+          color: $second-color;
+        }
       }
 
       & > h2 {
         font-family: $secondary-heading-font;
-        font-size: 1.5rem;
-        //gardien text color
-        background-color: $third-color;
-        background-image: linear-gradient(45deg, $fifth-color, $fourth-color);
-        background-size: 100%;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        -moz-text-fill-color: transparent;
       }
     }
 
+    #get-started-action {
+      display: flex;
+      justify-content: center;
+      & > button {
+        @include btnStyle($second-color);
+
+        & > a {
+          color: $third-color;
+          text-decoration: none;
+          font-family: $regular-text-font;
+        }
+      }
+    }
+
+    .separator {
+      @include home-separtor($first-color);
+    }
   }
 
-  #bottom-side {
-    height: 50%;
-    background-color: $third-color;
+  #get-started-options {
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 50% 0 50% 0;
+    background-color: $first-color;
+    position: relative;
 
     #home-btns {
       height: fit-content;
@@ -57,8 +71,12 @@
       justify-content: space-evenly;
 
       & > * {
-        @include btnStyle($fifth-color)
+        @include btnStyle($fifth-color);
       }
+    }
+
+    .separator {
+      @include home-separtor($third-color);
     }
   }
 }
