--- a/src/app/components/homePage/home.scss
+++ b/src/app/components/homePage/home.scss
@@ -3,6 +3,7 @@
 #home-page {
   width: 100%;
   height: 100%;
+  animation: fadein 1s ease-out;
 
   #intro {
     height: 100%;
@@ -17,7 +18,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: space-evenly;
 
       & > h1 {
         font-family: $main-heading-font;
@@ -25,27 +26,38 @@
         color: $first-color;
 
         &::after {
-          content: "Bay";
-          font-size: 3rem;
+          content: "Music Bay";
+          font-size: 3.5rem;
           color: $second-color;
+          font-family: $secondary-heading-font;
         }
       }
 
-      & > h2 {
+      & > h3 {
         font-family: $secondary-heading-font;
+        font-size: 2rem;
+        background: linear-gradient(
+          to right,
+          $fifth-color,
+          $first-color,
+          $fourth-color
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
       }
     }
 
     #get-started-action {
       display: flex;
       justify-content: center;
+
       & > button {
         @include btnStyle($second-color);
 
         & > a {
           color: $third-color;
           text-decoration: none;
-          font-family: $regular-text-font;
+          font-family: $secondary-heading-font;
         }
       }
     }
@@ -56,27 +68,43 @@
   }
 
   #get-started-options {
-    height: 100%;
+    height: 90%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
     background-color: $first-color;
     position: relative;
+    #get-started-intro {
+      color: $third-color;
+      font-family: $regular-text-font;
+      text-align: center;
+      width: 60%;
 
+      & > h1 {
+        background: linear-gradient(
+          to right,
+          $fifth-color,
+          $fourth-color,
+          $third-color
+        );
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-family: $secondary-heading-font;
+      }
+    }
     #home-btns {
       height: fit-content;
       width: 100%;
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
-
+      align-items: flex-start;
+      font-family: $regular-text-font;
       & > * {
         @include btnStyle($fifth-color);
       }
-    }
-
-    .separator {
-      @include home-separtor($third-color);
     }
   }
 }
