--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -1,8 +1,14 @@
 @import "./_variables.scss";
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   width: 100vw;
   height: 100vh;
   margin: 0;
+  padding: 0;
   background-color: $first-color;
 }
 
