finished categories page

--- a/src/app/components/homePage/home.scss
+++ b/src/app/components/homePage/home.scss
@@ -102,8 +102,9 @@
       justify-content: space-evenly;
       align-items: flex-start;
       font-family: $regular-text-font;
-      & > * {
+      & > a > button {
         @include btnStyle($fifth-color);
+        cursor: pointer;
       }
     }
   }
