--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -1,11 +1,16 @@
 @import "./_variables.scss";
 
+:root {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   margin: 0;
   padding: 0;
