started working on player ui and added prettier to eslint

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap");
 
 //colors
 $first-color: #101728;
@@ -11,9 +11,9 @@ $fifth-color: #9340ff;
 $shadow-color: #ababab;
 
 //fonts
-$main-heading-font: 'Roboto Mono', monospace;;
-$secondary-heading-font: 'Pacifico', cursive;
-$regular-text-font: 'Noto Serif', serif;
+$main-heading-font: "Roboto Mono", monospace;
+$secondary-heading-font: "Pacifico", cursive;
+$regular-text-font: "Noto Serif", serif;
 
 //mixins
 @mixin btnStyle($bg_color_p) {
@@ -22,7 +22,7 @@ $regular-text-font: 'Noto Serif', serif;
   border-radius: 10px;
   padding: 10px;
   font-family: $secondary-heading-font;
-  font-weight:bold ;
+  font-weight: bold;
   color: $third-color;
 
   &:active {
@@ -34,7 +34,7 @@ $regular-text-font: 'Noto Serif', serif;
   }
 }
 
-@mixin home-separtor ($fill_color_p){
+@mixin home-separtor($fill_color_p) {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -48,6 +48,23 @@ $regular-text-font: 'Noto Serif', serif;
     display: block;
     width: calc(100% + 1.3px);
     height: 150px;
+    fill: $fill_color_p;
+  }
+}
+
+@mixin music-separtor($fill_color_p) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+
+  & > svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 50px;
     fill: $fill_color_p;
   }
 }
