--- a/src/app/components/musicPlayer/musicPlayer.scss
+++ b/src/app/components/musicPlayer/musicPlayer.scss
@@ -8,4 +8,53 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  #music_list {
+    position: relative;
+    background-color: $first-color;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    & > h1 {
+      font: 2rem $main-heading-font;
+      color: $third-color;
+    }
+
+    ul {
+      list-style: none;
+      li > .song {
+        border: none;
+        color: $second-color;
+        background: linear-gradient(45deg, $fourth-color, $fifth-color);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        background-clip: text;
+        text-decoration: underline;
+        font-family: $secondary-heading-font;
+        font-weight: bold;
+        font-size: 1.2rem;
+        cursor: pointer;
+        padding: 10px;
+      }
+    }
+  }
+
+  #controls {
+    width: 100%;
+    height: 35%;
+    background-color: $third-color;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    #separator {
+      @include music-separtor($first-color);
+    }
+  }
 }
