changed : music Player style + colors ; added time shifting and song progress bar

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -3,11 +3,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap");
 
 //colors
-$first-color: #101728;
-$second-color: #1f41bb;
+$first-color: #24225c;
+$second-color: #1d2996;
 $third-color: #ffffff;
-$fourth-color: #ff3c5f;
-$fifth-color: #9340ff;
+$fourth-color: #c939e6;
+$fifth-color: #4ad8ce;
 $shadow-color: #ababab;
 
 //fonts
