--- a/src/app/components/homePage/home.scss
+++ b/src/app/components/homePage/home.scss
@@ -1,4 +1,5 @@
-@import "../../_variables.scss";
+@import "../../_variables";
+@import "../../mixins";
 
 #home-page {
   width: 100%;
@@ -37,6 +38,7 @@
         font-family: $secondary-heading-font;
         font-size: 2rem;
         background: linear-gradient(to right, $fifth-color, $first-color, $fourth-color);
+        background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
