--- a/src/app/_mixins.scss
+++ b/src/app/_mixins.scss
@@ -1,5 +1,42 @@
 @import "./variables";
 
+@mixin HomeLogo($static, $width_p, $height_p) {
+  width: $width_p;
+  height: $height_p;
+
+  #logo {
+    #sides {
+      @if not($static) {
+        animation-name: sound_1;
+        animation-duration: 2s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+      }
+
+      & > :first-child {
+        fill: $fifth-color;
+      }
+
+      & > :last-child {
+        fill: $fourth-color;
+      }
+    }
+
+    #middle {
+      @if not($static) {
+        animation-name: sound_2;
+        animation-duration: 2s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+      }
+
+      & > :first-child {
+        fill: $first-color;
+      }
+    }
+  }
+}
+
 @mixin btnStyle($bg_color_p) {
   background-color: $bg_color_p;
   border: none;
@@ -125,5 +162,94 @@
     width: 20px;
     border-radius: 50px;
     background: linear-gradient(45deg, $fourth-color, $fifth-color);
+  }
+}
+
+/**
+ * Navbar Mixin
+ */
+
+@mixin Naviagtion {
+  position: fixed;
+  left: 0;
+  height: 100%;
+  width: 15%;
+  background-color: $first-color;
+  z-index: $navbar-zindex;
+  box-shadow: 0px 0px 10px 5px $shadow-color;
+  animation: fadein 500ms linear;
+
+  .hide-toggle {
+    display: none;
+  }
+
+  #full-bar {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    #brand {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      background-color: $third-color;
+      border-radius: 0px 0px 210px 0px;
+      svg {
+        @include HomeLogo(true, 50px, 50px);
+      }
+
+      h3 {
+        color: $first-color;
+        font: 1rem $secondary-heading-font;
+      }
+    }
+
+    #links {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      ul {
+        list-style: none;
+        padding: 0;
+
+        li {
+          width: 100%;
+          margin-bottom: 15px;
+          font: 1rem $main-heading-font;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          transition: all 500ms;
+
+          & > * {
+            color: $third-color;
+            text-decoration: none;
+          }
+
+          &:hover {
+            background: linear-gradient(90deg, $fourth-color, $third-color);
+            -webkit-text-fill-color: transparent;
+            -webkit-background-clip: text;
+            background-clip: text;
+            transform: scale(1.05);
+          }
+        }
+      }
+    }
+    .hide-close {
+      display: none;
+    }
+
+    .show-close {
+      background-color: transparent;
+      color: $third-color;
+      border: none;
+      margin-bottom: 20px;
+      text-decoration: underline;
+      cursor: pointer;
+    }
   }
 }
