--- a/src/app/components/categoriesList/categories.scss
+++ b/src/app/components/categoriesList/categories.scss
@@ -2,8 +2,9 @@
 
 #categories {
   background-color: $third-color;
-  width: 100%;
+  width: 85%;
   height: 100%;
+  margin-left: 15%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
