--- a/src/app/components/musicPlayer/musicPlayer.scss
+++ b/src/app/components/musicPlayer/musicPlayer.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  animation: fadein 1s linear;
+  animation: fadein 500ms linear;
 
   #music_list {
     position: relative;
@@ -84,7 +84,7 @@
           height: 50px;
           margin: 5px;
           border: none;
-          border-radius: 50px;
+          border-radius: 10px;
           color: $first-color;
           background-color: transparent;
           font: bold 1rem $regular-text-font;
@@ -107,7 +107,7 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(90deg, $fourth-color, $second-color, $fifth-color);
-            border-radius: 50px;
+            border-radius: 10px;
             opacity: 0;
             transition: all 500ms;
             color: $third-color;
@@ -118,8 +118,7 @@
 
           &:hover {
             transform: scale(0.9);
-            background-color: $second-color;
-            box-shadow: 0px 0px 0px;
+            box-shadow: 0px 0px 20px 5px $shadow-color;
             & > * {
               color: $third-color;
               z-index: 2;
@@ -135,16 +134,18 @@
 
   #controls {
     width: 100%;
-    height: 30%;
+    height: 20%;
     box-sizing: border-box;
     background-color: $first-color;
     position: relative;
+    bottom: 0;
+    left: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 0px 12px;
-    z-index: 5;
+    z-index: $music-controls-zindex;
 
     #separator {
       @include music-separtor($third-color);
