--- a/src/app/components/musicPlayer/musicPlayer.scss
+++ b/src/app/components/musicPlayer/musicPlayer.scss
@@ -67,6 +67,37 @@
         }
       }
     }
+
+    #emptyList {
+      width: 50%;
+      height: 30%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      svg {
+        width: 50%;
+        height: 50%;
+        g {
+          .lines {
+            fill: $first-color;
+          }
+          #face1 {
+            fill: $first-color;
+          }
+          #face2 {
+            fill: $first-color;
+          }
+        }
+      }
+
+      h3 {
+        color: $first-color;
+        font-family: $main-heading-font;
+      }
+    }
+
     #songsList {
       width: 100%;
       height: 50%;
@@ -74,6 +105,7 @@
       justify-content: center;
       align-items: flex-start;
       overflow-y: auto;
+
       ul {
         list-style: none;
         height: 100%;
