--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -63,3 +63,12 @@ $home-page-zindex: 6;
     opacity: 1;
   }
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
