--- a/src/app/components/homePage/home.scss
+++ b/src/app/components/homePage/home.scss
@@ -98,6 +98,11 @@
       justify-content: space-evenly;
       align-items: flex-start;
       font-family: $regular-text-font;
+
+      & > button {
+        @include btnStyle($fourth-color);
+        cursor: pointer;
+      }
       & > a > button {
         @include btnStyle($fourth-color);
         cursor: pointer;
