change : changed music playing logo color

--- a/src/app/components/musicPlayer/musicPlayer.scss
+++ b/src/app/components/musicPlayer/musicPlayer.scss
@@ -195,7 +195,7 @@
         flex-direction: row;
 
         & > svg {
-          fill: url(#fillingColorLogo);
+          fill: url(#fillingColor);
           width: 10%;
           height: 10%;
         }
